--- a/src/app/quiz/quiz.component.html
+++ b/src/app/quiz/quiz.component.html
@@ -4,9 +4,12 @@
     <h3>You can see your answers</h3>
     <button class="btn--outline">Reset</button>
   </section>
-  <section class="quiz_questions-list">
-    <app-question></app-question>
+    <section class="quiz_category">
+    <app-category></app-category>
   </section>
+  <!-- <section class="quiz_questions-list">
+    <app-question></app-question>
+  </section> -->
   <div class="quiz_validation">
     <button (click)="goToResultPage()" class="btn">Show score</button>
   </div>
