update category cards

--- a/src/app/quiz/category/category.component.html
+++ b/src/app/quiz/category/category.component.html
@@ -1,4 +1,6 @@
 <p>category works!</p>
-<section class="question_container" *ngFor="let content of quizContent; let i = index">
-  <h4 class="question_label"><b>category {{ i + 1 }} :</b> {{ content?.name }}</h4>
+<section class="category_container">
+<div class="category_card" *ngFor="let content of quizContent; let i = index">
+  <h4 class="category_label">{{ content?.name }}</h4>
+</div>
 </section>
