--- a/src/app/quiz/category/category.component.scss
+++ b/src/app/quiz/category/category.component.scss
@@ -1,6 +1,6 @@
 .category {
     &_container {
-        @apply grid grid-cols-4 gap-4 w-full;
+        @apply grid grid-cols-4 gap-4 p-6 w-full;
     }
     &_card {
         @apply bg-gray-100 p-4 rounded-lg shadow hover:shadow-lg transition-shadow duration-300;
