--- a/src/app/quiz/category/category.component.html
+++ b/src/app/quiz/category/category.component.html
@@ -17,7 +17,7 @@
   
   <section class="category_container">
     <div class="category_card" *ngFor="let content of filteredCategories; let i = index">
-      <h4 class="category_label">{{ content?.name }}</h4>
+      <h4 (click)="goToQuestions(content.id)" class="category_label">{{ content?.name }}</h4>
     </div>
   </section>
   
