ajout de clear pour la barre de recherche

--- a/src/app/quiz/category/category.component.html
+++ b/src/app/quiz/category/category.component.html
@@ -11,6 +11,7 @@
           required
         />
         <button type="submit" class="search-button">Search</button>
+        <button type="button" class="reset-button" (click)="onReset()" *ngIf="searchModel.searchTerm.trim()">X</button>
       </div>
     </form>
   </div>
