--- a/src/app/quiz/category/category.component.scss
+++ b/src/app/quiz/category/category.component.scss
@@ -46,6 +46,18 @@ max-width: 2000px;
   }
 }
 
+.reset-button {
+  padding: 0.6rem 1rem;
+  background-color: #eb2525;
+  color: #ffffff;
+  border: none;
+  border-radius: 3rem;
+  font-size: 1rem;
+  font-weight: 500;
+  cursor: pointer;
+  transition: background-color 0.3s ease;
+}
+
 .search-button {
   padding: 0.75rem 1.5rem;
   background-color: #2563eb;
