--- a/src/app/quiz/quiz.component.html
+++ b/src/app/quiz/quiz.component.html
@@ -5,6 +5,6 @@
     <button class="btn--outline">Reset</button>
   </section>
     <section class="quiz_category">
-    <app-category></app-category>
+    <app-question></app-question>
   </section>
 </section>
