--- a/src/app/quiz/quiz.component.scss
+++ b/src/app/quiz/quiz.component.scss
@@ -18,4 +18,12 @@
   &_validation {
     @apply flex justify-center;
   }
+
+  &_submit {
+    @apply flex justify-center my-8;
+    
+    button {
+      @apply px-8 py-3 bg-blue-600 text-white rounded-lg font-semibold text-lg hover:bg-blue-700 transition-colors;
+    }
+  }
 }
